# vantiq-extension-sources

./: .gitignore  LICENSE.md  README.md  build.gradle  server.EasyModbus.config  settings.gradle  sider.yml
.github/: CODEOWNERS
CSVSource/: README.md  a.csv  build.gradle
EasyModbusSource/: README.md  build.gradle
FTPClientSource/: README.md  build.gradle
HikVisionSource/: README.md  build.gradle
buildSrc/: build.gradle
camelAssemblies/: README.md  build.gradle
camelComponent/: README.md  (+1 more)
extpsdk/: .gitignore  README.md  build.gradle  pytest.ini  requirements-build.in  requirements-sdk.in  requirements.txt  setup.cfg  setup.py
extpsdk/docs/: Publishing.md
extpsdk/src/main/python/: setup.py  vantiqconnectorsdk.py
extpsdk/src/main/python/vantiq/extpsdk/: VantiqConnector.py
extpsdk/src/main/templates/: setup.cfg.tmpl
extpsdk/src/test/python/: test_ConnectionErrors.py  test_VantiqConnector.py  testserver.py
extpsdk/src/test/python/vantiqTest/extpsdk/: test_ConnectionErrors.py  test_VantiqConnector.py  testserver.py
pythonExecSource/: .gitignore  LICENSE.txt  README.md  build.gradle  pytest.ini  requirements-build.in  requirements-conn.in  requirements.txt  setup.cfg
pythonExecSource/docs/: Publishing.md  Usage.md
pythonExecSource/src/main/docker/: Dockerfile
pythonExecSource/src/main/python/: pyExecConnector.py
pythonExecSource/src/main/resources/: pythonExecImpl.json
pythonExecSource/src/main/templates/: Dockerfile.tmpl  requirements.txt.tmpl  setup.cfg.tmpl
pythonExecSource/src/test/python/: test_PyExecConnector.py  test_PyExecConnectorLive.py  testserver.py
pythonExecSource/src/test/resources/: logger.ini
(+521 files in other folders)
