[metadata]
name = vantiqconnectorsdk
version = 1.1.7
description= SDK for building Vantiq extension sources/connectors in Python
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/Vantiq/vantiq-extension-sources
author = Vantiq, Inc
author_email = fcarter@vantiq.com
license= MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir = =src/main/python
py_modules = vantiqconnectorsdk
python_requires = >=3.8
install_requires=
    websockets>=10.2
    jprops>=2.0.2
