[metadata]
name = vantiqPythonExecConnector
version = 1.0.2
description= Vantiq Connector for Execution of Python Code
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Vantiq/vantiq-extension-sources'
author = Vantiq, Inc
author_email = fcarter@vantiq.com
license= MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir = =src/main/python
py_modules = pyExecConnector
python_requires = >=3.8
install_requires=
    aiohttp>=3.8
    websockets>=10.2
    codetiming>=1.3.0
    vantiqsdk>=1.0.1
    vantiqconnectorsdk>=1.0.2

[options.entry_points]
console_scripts =
    vantiqPythonExecConnector = pyExecConnector:main
